[gd_scene load_steps=5 format=2]

[ext_resource path="res://UpFireball.gd" type="Script" id=1]
[ext_resource path="res://Assets/upbullet.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.99238, 18.5227 )

[node name="UpFireball" type="Area2D"]
position = Vector2( 18.239, 15.6482 )
scale = Vector2( 1.5, 1.5 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.317968, -0.377573 )
scale = Vector2( 1, 1.18032 )
frames = SubResource( 1 )
animation = "shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0518188, -0.259077 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.0518188, 0.120902 )
scale = Vector2( 1.66324, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
